# cargo_auto_template_new_cli

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md  github_release_prepare.sh  temp7.txt
.github/workflows/: rust_fmt_auto_build_test.yml  win_rust_fmt_auto_build_test.yml
automation_tasks_rs/: Cargo.toml  README.md
automation_tasks_rs/src/: cargo_auto_github_api_mod.rs  generic_functions_mod.rs  main.rs  utils_mod.rs
automation_tasks_rs/src/cargo_auto_lib/: auto_git_mod.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tidy_warnings.txt
docs/cargo_auto_template_new_cli/: all.html  fn.main.html  fn.main_returns_anyhow_result.html  fn.print_greet_name.html  fn.print_help.html  fn.upper_greet_name.html  index.html  sidebar-items.js
docs/cargo_auto_template_new_cli/bin_cli_functions_mod/: constant.BLUE.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  fn.panic_set_hook.html  fn.tracing_init.html  index.html  macro.pos.html
docs/cargo_auto_template_new_cli/utils_mod/: constant.BLUE.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  fn.tracing_init.html  index.html  macro.pos.html  sidebar-items.js
docs/cargo_auto_template_new_cli_lib/: all.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  enum.LibraryError.html  fn.format_hello_phrase.html  fn.format_upper_hello_phrase.html  index.html  sidebar-items.js  trait.ResultLogError.html
docs/cargo_auto_template_new_cli_lib/hello_mod/: fn.format_hello_phrase.html  fn.format_upper_hello_phrase.html  fn.make_uppercase.html  index.html
docs/search.desc/cargo_auto_template_new_cli/: cargo_auto_template_new_cli-desc-0-.js
docs/search.desc/cargo_auto_template_new_cli_lib/: cargo_auto_template_new_cli_lib-desc-0-.js
docs/src/cargo_auto_template_new_cli/: bin_cli_functions_mod.rs.html  main.rs.html  utils_mod.rs.html
docs/src/cargo_auto_template_new_cli_lib/: hello_mod.rs.html  lib.rs.html
docs/trait.impl/cargo_auto_template_new_cli_lib/: trait.ResultLogError.js
docs/trait.impl/core/error/: trait.Error.js
docs/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
examples/: example_1.rs
src/: hello_mod.rs  lib.rs
tests/: integration_test.rs
