[package]
name = "cargo_auto_template_new_cli"
# binary executable does not need to be SemVer, because nobody depends on it
version = "0.0.3"
description = "Basic Rust project template for CLI and library, more than just `cargo new hello`"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/automation-tasks-rs/cargo_auto_template_new_cli"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained", "work-in-progress", "rustlang"]
categories = ["command-line-interface"]
# publish as a cargo tool. Only this files.
publish = false
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
# SemVer rules: Major version zero (0.y.z) is for initial development. Anything MAY change at any time. The public API SHOULD NOT be considered stable.
# WARNING: Although dependecies in Cargo.toml look like a specific version of the crate, they are just like a carret version (^x.y.z) and actually specify 
# the minimum version and allow automatic SemVer compatible updates up to a MAJOR increment! Always check the true version with `cargo tree`!
log = "0.4"
pretty_env_logger="0.5.0"
thiserror = "1.0.30"
anyhow="1.0.56"

[lib]
name = "cargo_auto_template_new_cli_lib"
path = "src/lib.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true

[[bin]]
name = "cargo_auto_template_new_cli"
path = "src/bin/cargo_auto_template_new_cli/main.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true
