[package]
name = "cargo_auto_template_new_cli"
# binary executable does not need to be SemVer, because nobody depends on it
version = "0.0.9"
description = "Basic Rust project template for CLI and library, more than just -cargo new hello-"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/automation-tasks-rs/cargo_auto_template_new_cli"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained", "work-in-progress", "rustlang"]
# allowed categories are listed here <https://crates.io/category_slugs>
categories = ["command-line-interface"]
# publish as a cargo tool. Only this files.
publish = false
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

# SemVer rules: Major version zero (0.y.z) is for initial development. Anything MAY change at any time. The public API SHOULD NOT be considered stable.
# WARNING: Although dependencies in Cargo.toml look like a specific version of the crate, they are just like a caret version (^x.y.z) and actually specify 
# the minimum version and allow automatic SemVer compatible updates up to a MAJOR increment! Always check the true version with `cargo tree`!
[dependencies]
log = "0.4.26"
pretty_env_logger="0.5.0"
thiserror = "2.0.12"
anyhow="1.0.97"

# You can choose which one is the important part of this package: lib or bin.
# The important part must have the same name as the package.
[lib]
name = "cargo_auto_template_new_cli_lib"
path = "src/lib.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true

[[bin]]
name = "cargo_auto_template_new_cli"
path = "src/bin/cargo_auto_template_new_cli/main.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true
